//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  role UserRole [not null]
  active Boolean [not null, default: true]
  lastLogin DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  transactions Transaction [not null]
  serviceOrders ServiceOrder [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  barcode String [unique]
  category ProductCategory [not null]
  price Decimal [not null]
  costPrice Decimal [not null]
  stock Int [not null]
  minStockLevel Int [not null]
  unit String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  transactionItems TransactionItem [not null]
  serviceItems ServiceItem [not null]
}

Table Customer {
  id String [pk]
  name String [not null]
  phone String
  email String
  address String
  membershipPoints Int [not null, default: 0]
  serviceOrders ServiceOrder [not null]
  transactions Transaction [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Transaction {
  id String [pk]
  customer Customer
  customerId String
  user User [not null]
  userId String [not null]
  totalAmount Decimal [not null]
  discountAmount Decimal [not null, default: 0]
  paymentMethod String [not null]
  items TransactionItem [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table TransactionItem {
  id String [pk]
  transaction Transaction [not null]
  transactionId String [not null]
  product Product [not null]
  productId String [not null]
  quantity Int [not null]
  unitPrice Decimal [not null]
  subtotal Decimal [not null]
}

Table ServiceOrder {
  id String [pk]
  customer Customer [not null]
  customerId String [not null]
  user User [not null]
  userId String [not null]
  vehicleType String [not null]
  vehicleNumber String [not null]
  issueDescription String [not null]
  status ServiceStatus [not null, default: 'WAITING']
  estimatedCost Decimal [not null]
  actualCost Decimal
  items ServiceItem [not null]
  createdAt DateTime [default: `now()`, not null]
  completedAt DateTime
}

Table ServiceItem {
  id String [pk]
  serviceOrder ServiceOrder [not null]
  serviceOrderId String [not null]
  product Product
  productId String
  description String [not null]
  quantity Int [not null, default: 1]
  unitPrice Decimal [not null]
  subtotal Decimal [not null]
}

Enum UserRole {
  SUPER_ADMIN
  CASHIER
  EMPLOYEE
}

Enum ProductCategory {
  OIL
  SPARE_PART
  SERVICE_TOOL
  ACCESSORY
}

Enum ServiceStatus {
  WAITING
  IN_PROGRESS
  COMPLETED
  DELIVERED
}

Ref: Transaction.customerId > Customer.id

Ref: Transaction.userId > User.id

Ref: TransactionItem.transactionId > Transaction.id

Ref: TransactionItem.productId > Product.id

Ref: ServiceOrder.customerId > Customer.id

Ref: ServiceOrder.userId > User.id

Ref: ServiceItem.serviceOrderId > ServiceOrder.id

Ref: ServiceItem.productId > Product.id